[package]
name = "rsb"
version = "0.1.9"
edition = "2021"
authors = ["MichaelFu <michael.fudenglong@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gamelife1314/rsb"
repository = "https://github.com/gamelife1314/rsb"
keywords = ["rsb", "benchmark", "http"]
categories = ["command-line-utilities"]
description = "a http server benchmark tool, written in rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.71", features = ["backtrace", "std"]}
bytes = "1.4.0"
clap = { version = "4.3.3", features = ["derive", "cargo", "help", "string"] }
clap_complete = "4.3.1"
env_logger = "0.10.0"
log = "0.4.19"
mime_guess = "2.0.4"
reqwest = {version = "0.11.18", features = ["default-tls", "native-tls", "stream", "json", "multipart", "socks"]}
tokio = {version = "1.29.1", features = ["time", "rt", "rt-multi-thread", "sync", "signal"]}
tokio-util = {version = "0.7.8", features = ["codec"]}
governor = "0.5.1"
async-trait = "0.1.68"
num_cpus = "1.15.0"
num = "0.4.0"
indicatif = {version = "0.17.5", features = ["tokio"]}
serde_json = "1.0.96"
serde = {version = "1.0.164", features = ["derive"]}
colored = "2.0.0"
concolor-clap = "0.1.0"
rlimit = "0.9.1"


[[bin]]
name = "rsb"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"