[package]
name = "rsb"
version = "0.2.1"
edition = "2021"
authors = ["MichaelFu <michael.fudenglong@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gamelife1314/rsb"
repository = "https://github.com/gamelife1314/rsb"
keywords = ["rsb", "benchmark", "http"]
categories = ["command-line-utilities"]
description = "a http server benchmark tool, written in rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.71", features = ["backtrace", "std"]}
bytes = "1.4.0"
clap = { version = "4.3.19", features = ["derive", "cargo", "help", "string"] }
clap_complete = "4.4.4"
env_logger = "0.10.0"
log = "0.4.19"
mime_guess = "2.0.4"
reqwest = {version = "0.11.18", features = ["default-tls", "native-tls", "stream", "json", "multipart", "socks"]}
tokio = {version = "1.29.1", features = ["time", "rt", "rt-multi-thread", "sync", "signal"]}
tokio-util = {version = "0.7.8", features = ["codec"]}
governor = "0.6.0"
async-trait = "0.1.72"
num_cpus = "1.16.0"
num = "0.4.0"
indicatif = {version = "0.17.7", features = ["tokio"]}
serde_json = "1.0.103"
serde = {version = "1.0.189", features = ["derive"]}
colored = "2.0.4"
concolor-clap = "0.1.0"
rlimit = "0.10.1"
async-process = "1.7.0"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.57", features = ["vendored"] }

[[bin]]
name = "rsb"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"